<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:hint="@string/string_name"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:hint="@string/string_email"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/string_password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_phone_number"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/string_phone_number"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/string_signup"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

</LinearLayout>
