<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:hint="@string/string_email"
        android:text="kajal9878@gmail.com"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/string_password"
        android:text="qwerty"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:text="@string/string_login"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:text="@string/string_create_account"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:text="@string/string_forgot_password"
        android:layout_height="wrap_content"/>


</LinearLayout>
